# agent-catalog

./: README.md  pyproject.toml
.github/workflows/: ci.yml
.seeds/: config.yaml
agent_catalog/: __init__.py  cli.py  client.py  config.py  decorators.py  diff.py  discovery.py  graph.py  loader.py  schema.py  security.py  serve.py  storage.py
examples/: agentic-inbox.yaml  nexusgate.yaml  trading-agent.yaml
tests/: test_cli.py  test_client.py  test_decorators.py  test_diff.py  test_discovery.py  test_features.py  test_loader.py  test_schema.py  test_schema_full.py  test_storage.py
